Version 2.0.0-20191025-26
Still don't know why video drivers wasnt being installed correctly using batch command.
 -Now program uses Powershell with -Invoke and -Credentials to connect a Admin capable machine and run
 remotely a ps1 file who adds machine to Domain;
 -Changing ProcessBuilder() from main command (runCMD(List<String> list)) by Runtime.getRuntime().exec();
 -Removed Thread.sleep from various lines (trusting in Process.wait() to interrupt thread;
 -Program version now in Window Title;